home - images + styles pronto

--- a/index.html
+++ b/index.html
@@ -28,36 +28,40 @@ id: home
 
 	<section id="about">
 		<div class="title">
-			<h1>About Me</h1>
+			<h1>About Me!</h1>
 		</div>
 		
 		<nav class="content">
-			<a href="#">
+			<a href="bio.html">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-bio.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
+					<h1>Bio.</h1>
 					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
 				</article>
 			</a>
-			<a href="#">
+			<a href="http://behance.net/gustavomarques" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-portfolio.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Portfolio.</h1>
+					<p>A collection of works over 8 years of career</p>
 				</article>
 			</a>
-			<a href="#">
+			<a href="http://gustavomarques.com.br/resume.pdf" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-resume.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Resume.</h1>
+					<p>See my education, skills, experience.</p>
 				</article>
 			</a>
-			<a href="#">
+			<a href="process.html">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-process.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Process.</h1>
+					<p>View my work process and take a new experience.</p>
 				</article>
 			</a>
 		</nav>
@@ -65,36 +69,43 @@ id: home
 
 	<section id="startups">
 		<div class="title">
-			<h1>startups</h1>
+			<h1>My startups!</h1>
 		</div>
 		
 		<nav class="content">
-			<a href="#">
+			<a href="http://waaav.com" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-waaav.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Waaav.</h1>
+					<p>It’s a good vibration holding.</p>
 				</article>
 			</a>
-			<a href="#">
+
+			<a href="http://skink.co" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-skink.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Skink.</h1>
+					<p>Skin + Ink = Help people to collect ideas and references for your next tattoo.</p>
 				</article>
 			</a>
-			<a href="#">
+
+			<a href="http://erwa.club" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-erwa.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Erwa.</h1>
+					<p>Find people to stonned meet.</p>
 				</article>
 			</a>
-			<a href="#">
+
+			<a href="http://mamom.pro" target="blank">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-mamom.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Mamom.</h1>
+					<p>Earn money playing DOTA2.</p>
 				</article>
 			</a>
 		</nav>
@@ -102,36 +113,40 @@ id: home
 
 	<section id="blog">
 		<div class="title">
-			<h1>blog</h1>
+			<h1>My blog!</h1>
 		</div>
 		
 		<nav class="content">
-			<a href="#">
+			<a href="post.html">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-blog-sexy.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
+					<h1>Featured.</h1>
+					<p>Sexy design, crie interfaces engajadoras e com experiências incríveis</p>
+				</article>
+			</a>
+			<a href="post.html">
+				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-erwa.jpg);"></span>
+				<article>
+					<h1>Resources.</h1>
+					<p>Sexy design, crie interfaces engajadoras e com experiências incríveis</p>
+				</article>
+			</a>
+			<a href="post.html">
+				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-mamom.jpg);"></span>
+				<article>
+					<h1>Million ideas.</h1>
 					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
 				</article>
 			</a>
-			<a href="#">
+			<a href="post.html">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-waaav.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
-				</article>
-			</a>
-			<a href="#">
-				<span class="bgDot"></span>
-				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
-				</article>
-			</a>
-			<a href="#">
-				<span class="bgDot"></span>
-				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Inspiration.</h1>
+					<p>Sexy design, crie interfaces engajadoras e com experiências incríveis</p>
 				</article>
 			</a>
 		</nav>
@@ -139,85 +154,82 @@ id: home
 
 	<section id="contact">
 		<div class="title">
-			<h1>contact</h1>
+			<h1>Contact Me!</h1>
 		</div>
 		
 		<nav class="content">
-			<a href="#">
+			<a href="quote.html">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-quote.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Quote.</h1>
+					<p>Told your problem and I develop your solution.</p>
 				</article>
 			</a>
-			<a href="#">
+
+			<a href="#" class="md-trigger" data-modal="modal-social">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-social.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>My social networks.</h1>
+					<p>Follow my jobs and my life!</p>
 				</article>
 			</a>
+
 			<a href="#">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-share.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Share.</h1>
+					<p>Share my work please.</p>
 				</article>
 			</a>
-			<a href="#">
+
+			<a href="#" class="md-trigger" data-modal="modal-contact">
 				<span class="bgDot"></span>
+				<span class="img" style="background-image: url(img/home-contact.jpg);"></span>
 				<article>
-					<h1>BIO.</h1>
-					<p>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</p>
+					<h1>Contact.</h1>
+					<p>View all ways to find me.</p>
 				</article>
 			</a>
 		</nav>
 	</section>
-<!--
-	<section class="section" id="block-cover">
-
-	</section>
-
-	<section class="section" id="block-about">
-		<div class="intro">
-			<h1>About Me</h1>
-			<h2>see my works and my skills</h2>
-		</div>
-		<ul class="content">
-			<li>
-				<h1>Bio.</h1>
-				<h2>I'm a UI Designer and Front End Developer from Brasília, Brazil who loves create ideas and new solutions for same problems.</h2>
-			</li>
-			<li>
-				<h1>Process.</h1>
-				<h2>I'm a UI Designer and Front End Developer from Brasília.</h2>
-			</li>
-			<li>
-				<h1>Resume.</h1>
-				<h2>Brazil who loves create ideas and new solutions for same problems.</h2>
-			</li>
-			<li>
-				<h1>Resume.</h1>
-				<h2>I'm a UI Designer and and new solutions for same problems.</h2>
-			</li>
-		</ul>
-	</section>
-
-	<section class="section" id="block-startups">
-		<h1>Startups</h1>
-	</section>
-
-	<section class="section" id="block-blog">
-		<h1>blog</h1>
-	</section>
-
-	<section class="section" id="block-contact">
-		<h1>contact</h1>
-	</section>
--->
 
 </div>
 
+
+<div class="md-modal md-effect-1" id="modal-social">
+	<div class="md-content">
+		<header>
+			<h1>My social networks.</h1>
+			<a href="#" class="md-close">&#xe617</a>
+		</header>
+		<nav>
+			<a href="#">Pinterest</a>
+			<a href="#">Behance</a>
+			<a href="#">LinkedIn</a>
+			<a href="#">Instagram</a>
+			<a href="#">Facebook</a>
+		</nav>
+	</div>
+</div>
+
+<div class="md-modal md-effect-1" id="modal-contact">
+	<div class="md-content">
+		<header>
+			<h1>Contact.</h1>
+			<a href="#" class="md-close">&#xe617</a>
+		</header>
+		<nav>
+			<a href="tel:+556193319595">Phone: +55 (61) 9331.9595</a>
+			<a href="mailto:gutooh@gmail.com">E-mail: gutooh@gmail</a>
+			<a href="skype:marx.dzign?chat">Skype: marx.dzign</a>
+		</nav>
+	</div>
+</div>
+
+<div class="md-overlay"></div><!-- the overlay element -->
 
 
 
