--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ id: home
 		</nav>
 	</section>
 
+
 	<section id="contact">
 		<div class="title">
 			<h1>Contact Me!</h1>
@@ -167,32 +168,61 @@ id: home
 				</article>
 			</a>
 
-			<a href="#" class="md-trigger" data-modal="modal-social">
-				<span class="bgDot"></span>
-				<span class="img" style="background-image: url(img/home-social.jpg);"></span>
+			<a href="#" class="blockquote">
+				<span class="img" style="background-image: url(img/home-blockquote.jpg);"></span>
 				<article>
-					<h1>My social networks.</h1>
-					<p>Follow my jobs and my life!</p>
+					<h2>Fifteen years ago companies competed on price. Today it's quality. Tomorrow it's design <span>Robert Hayes, Harvard Business School professor</span></h2>
 				</article>
 			</a>
 
-			<a href="#">
-				<span class="bgDot"></span>
-				<span class="img" style="background-image: url(img/home-share.jpg);"></span>
+			<a href="http://instagram.com/gustavomarquesf" target="blank" class="contact-button">
 				<article>
-					<h1>Share.</h1>
-					<p>Share my work please.</p>
+					<h2>Instagram.</h2>
 				</article>
 			</a>
 
-			<a href="#" class="md-trigger" data-modal="modal-contact">
-				<span class="bgDot"></span>
-				<span class="img" style="background-image: url(img/home-contact.jpg);"></span>
+			<a href="http://www.pinterest.com/gustavomarquesf/" target="blank" class="contact-button">
 				<article>
-					<h1>Contact.</h1>
-					<p>View all ways to find me.</p>
+					<h2>Pinterest.</h2>
 				</article>
 			</a>
+
+			<a href="https://www.behance.net/gustavomarques" target="blank" class="contact-button">
+				<article>
+					<h2>Behance.</h2>
+				</article>
+			</a>
+
+			<a href="https://www.facebook.com/gustavo.marquesfernandes.3" target="blank" class="contact-button">
+				<article>
+					<h2>Facebook.</h2>
+				</article>
+			</a>
+
+			<a href="https://www.linkedin.com/pub/gustavo-marques-fernandes/49/740/14b" target="blank" class="contact-button">
+				<article>
+					<h2>LinkedIn.</h2>
+				</article>
+			</a>
+
+			<a href="skype:marx.dzign?chat" target="blank" class="contact-button">
+				<article>
+					<h2>Skype.</h2>
+				</article>
+			</a>
+
+			<a href="tel:+556193319595" target="blank" class="contact-button">
+				<article>
+					<h2>Phone.</h2>
+				</article>
+			</a>
+
+			<a href="mailto:gutooh@gmail.com" target="blank" class="contact-button">
+				<article>
+					<h2>E-mail.</h2>
+				</article>
+			</a>
+
 		</nav>
 	</section>
 
