--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: home
-title: Home
-id: home
+style: home
 ---
 
 <!--<section id="{{ page.id }}">-->
@@ -13,6 +12,35 @@ id: home
 		<span id="nome">Gustavo Marques</span>
 		<span id="label">strategy design + innovation</span>
 	</a>
+	
+	<!--
+	<nav>
+		<ul>
+			<li><h1>About me</h1></li>
+			<li><a href="" title="">Home.</a></li>
+			<li><a href="" title="">Bio.</a></li>
+			<li><a href="" title="">Portfolio.</a></li>
+			<li><a href="" title="">Resume.</a></li>
+			<li><a href="" title="">Services.</a></li>
+		</ul>
+		
+		<ul>
+			<li><h1>My startups</h1></li>
+			<li><a href="" title="">Waaav.</a></li>
+			<li><a href="" title="">Skink.</a></li>
+			<li><a href="" title="">Mamom.</a></li>
+			<li><a href="" title="">Erwa.</a></li>
+			<li><a href="" title="">Amp.</a></li>
+			<li><a href="" title="">Sexalize.</a></li>
+			
+		</ul>
+
+		<ul>
+			<li><h1>Contact me</h1></li>
+			
+		</ul>
+	</nav>
+	-->
 </div>
 
 
@@ -60,8 +88,8 @@ id: home
 				<span class="bgDot"></span>
 				<span class="img" style="background-image: url(img/home-process.jpg);"></span>
 				<article>
-					<h1>Process.</h1>
-					<p>View my work process and take a new experience.</p>
+					<h1>Services.</h1>
+					<p>Take new experience for the sames services.</p>
 				</article>
 			</a>
 		</nav>
@@ -164,7 +192,7 @@ id: home
 				<span class="img" style="background-image: url(img/home-quote.jpg);"></span>
 				<article>
 					<h1>Quote.</h1>
-					<p>Told your problem and I develop your solution.</p>
+					<p>Begin your project with amazing quotation experience.</p>
 				</article>
 			</a>
 
